--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
+    "jugglingdb": "^0.3.0",
+    "jugglingdb-mysql": "0.0.10",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "swig": "^1.4.2",
