--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "bower": "^1.3.12",
+    "connect-mongo": "^0.8.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "jugglingdb": "^0.3.0",
     "jugglingdb-mysql": "0.0.10",
+    "mongoose": "^4.0.1",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "swig": "^1.4.2",
