--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
-    "jugglingdb": "^0.3.0",
-    "jugglingdb-mysql": "0.0.10",
     "mongoose": "^4.0.1",
     "morgan": "~1.5.1",
+    "mysql": "^2.6.1",
+    "sequelize": "^2.0.5",
     "serve-favicon": "~2.2.0",
     "swig": "^1.4.2",
     "yaml-config": "^0.3.0"
