--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.5.1",
     "mysql": "^2.6.1",
     "sequelize": "^2.0.5",
+    "sequelize-cli": "^1.6.0",
     "serve-favicon": "~2.2.0",
     "swig": "^1.4.2",
     "yaml-config": "^0.3.0"
